--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,7 @@
 /* Fonts */
 :root {
   --font-default: "Open Sans", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-primary: "Montserrat", sans-serif;
+  --font-primary: "Poppins", sans-serif;
   --font-secondary: "Poppins", sans-serif;
 }
 
@@ -23,6 +23,7 @@
   --color-primary: #008374;
   --color-secondary: #f85a40;
   --color-fancy-primary: #7ece93;
+  --color-gray: #afb7bb;
 }
 
 /* Smooth scroll behavior */
